test_yuriiq/catalog/language/russian/payment/pp_pro_iframe.php
<?php

// text
$_['text_title']	= 'Credit or Debit Card';
$_['text_secure_connection']	= 'Creating a secure connection...';

// error
$_['error_connection']	= 's administrator for assistance or choose a different payment method.";';
?>